--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="images/ICON.ico">
-<link rel="apple-touch-icon" href="images/ICON.png">
-<link rel="icon" sizes="192x192" href="images/ICON.png">
+<link rel="shortcut icon" href="ICON.ico">
+<link rel="apple-touch-icon" href="ICON.png">
+<link rel="icon" sizes="192x192" href="ICON.png">
 </head>
 <title>Blimp Player</title>
-<center><h2><img src="images/BlimpPlayer.png" height="" width="950"></h2>
+<center><h2><img src="BlimpPlayer.png" height="" width="950"></h2>
 <p>The Night Begins To Shine | Teen Titans Go!</p><p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bdoNY8HHlYc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 <p>Laszlo LTT intro</p><p><audio controls>
-  <source src="sounds/laszlo.mp3" type="audio/mpeg">
+  <source src="laszlo.mp3" type="audio/mpeg">
 </audio></p>
 </center>
