--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <p>Laszlo LTT intro</p><p><audio controls>
   <source src="laszlo.mp3" type="audio/mpeg">
 </audio></p>
+  <p>XMAS</p><p><a href="xmas.html">Christmas Music | Blimp Player XMAS</a></p>
 </center>
