--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <title>Blimp Player</title>
 <center><h2><img src="BlimpPlayer.png" height="" width="950"></h2>
 <p>The Night Begins To Shine | Teen Titans Go!</p><p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bdoNY8HHlYc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-<p>Laszlo LTT intro</p><p><audio controls>
-  <source src="laszlo.mp3" type="audio/mpeg">
-</audio></p>
+<p>Supernova | LTT intro</p><p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PKfxmFU3lWY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
   <p>XMAS</p><p><a href="xmas.html">Christmas Music | Blimp Player XMAS</a></p>
 </center>
